[package]
name = "helioxide"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
chrono-tz = "0.10.4"
env_logger = "0.11.10"
log = "0.4.29"
thiserror = "2.0.18"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
