[package]
name = "helioxide"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of NREL Solar Position Algorithm (SPA)"
repository = "https://github.com/Kuenlun/helioxide"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.44"
chrono-tz = "0.10.4"
env_logger = "0.11.10"
log = "0.4.29"
thiserror = "2.0.18"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
